src/test/test-models/good/fun_args_4.stan
functions { real foo(real x1, real x2, real x3, real x4) { return x1; } } model { }
