src/test/test-models/bad/rng_loc3.stan
functions {
  real foo_lpdf(real x) {
    return exponential_rng(x);
  }
}
model {
}
